--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,6 +1,11 @@
+<!-- HEADER -->
 <app-nav></app-nav>
+
+<!--BODY / COMPONENTS-->
 <div class="container">
-  <app-eventos></app-eventos>
+  <!--ROUTES-->
   <router-outlet></router-outlet>
 </div>
 
+<!-- SPINNER-->
+<ngx-spinner></ngx-spinner>
