--- a/Front/ProEventos-App/src/app/components/contato/contato.component.html
+++ b/Front/ProEventos-App/src/app/components/contato/contato.component.html
@@ -1,1 +1,1 @@
-<app-titulo [titulo]="'Contatos'"></app-titulo>
+<app-titulo [titulo]="'Contatos'" [iconClass]="'far fa-envelope-open-text'"></app-titulo>
