--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -139,8 +139,6 @@
       </form>
     </div>
     <div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
-      <!--<p>Form value : {{ form.controls.lotes.value | json }}</p>
-         <p>Form valid : {{ form.controls.lotes.status | json }}</p> -->
      <div class="p-3">
        <div class="d-flex border-bottom">
          <h2 class="mr-auto">Lotes do Evento</h2>
@@ -268,7 +266,22 @@
          <button class="btn btn-success"   [disabled]="!form.controls.lotes.valid" (click)="salvarLote()">Salvar Lotes</button>
        </div>
      </div>
-   </div>
+    </div>
+
+   <div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
+      <div class="p-3">
+          <div class="d-flex border-bottom">
+            <h2 class="mr-auto">
+              Redes Sociais
+            </h2>
+            <h2>
+              <i class="fa fa-share-square mr-2"></i>
+            </h2>
+          </div>
+          <app-redesSociais [eventoId]="eventoId"></app-redesSociais>
+        </div>
+    </div>
+
   </div>
 
   <div class="col-md-4" *ngIf="modoEditar">
