--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -1,39 +1,41 @@
-<app-titulo [titulo]="'Perfil'"></app-titulo>
+<app-titulo [titulo]="'Perfil ' + (ehPalestrante ? 'Palestrante' : 'Participante')"></app-titulo>
 <div class="card rounded shadow-sm">
-  <form [formGroup]="form">
+
     <div class="row p-3">
       <div class="col-lg-3 pt-1">
         <div class="card mb-3">
           <div class="card-header"></div>
+          <input type="file" #file (change)="onFileChange($event)" style="display: none;"/>
           <div class="d-flex align-self-center pt-3">
-            <a>
+
               <img
-                src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRbezqZpEuwGSvitKy3wrwnth5kysKdRqBW54cAszm_wiutku3R"
+                [src]="imagemURL"
                 name="aboutme"
                 width="120"
                 height="120"
+                (click)="file.click()"
                 class="rounded-circle"
+                style="cursor:pointer;"
               />
-            </a>
+
           </div>
           <div class="card-body">
-            <div class="h4 text-center mb-3">@UserName</div>
-            <div class="h7 text-bold pb-1"><b>Nome:</b> Miracles Lee Cross</div>
+            <div class="h4 text-center mb-3">@{{usuario.userName}}</div>
+            <div class="h7 text-bold pb-1"><b>Nome:</b> {{ usuario.primeiroNome + ' ' + usuario.ultimoNome}}</div>
             <div class="h7">
-              Developer of web applications, JavaScript, PHP, Java, Python,
-              Ruby, Java, Node.js, etc.
+             {{usuario.descricao}}
             </div>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <div class="row">
                 <div class="col-6 text-center border-right">
-                  <div class="h5">1342</div>
-                  <div class="h6 text-muted">Eventos Ministrados</div>
+                  <div class="h5">0</div>
+                  <div class="h6 text-muted">Meus Eventos Criados</div>
                 </div>
                 <div class="col-6 text-center">
-                  <div class="h5">1342</div>
-                  <div class="h6 text-muted">Eventos Participados</div>
+                  <div class="h5">0</div>
+                  <div class="h6 text-muted">Meus Eventos como {{ehPalestrante ? 'Palestrante' : 'Participante'}}</div>
                 </div>
               </div>
             </li>
@@ -42,175 +44,36 @@
         </div>
       </div>
       <div class="col-lg-9">
-        <div class="form-row">
-          <div class="form-group col-12">
-            <h3 class="border-bottom">Detalhe Perfil</h3>
-          </div>
-          <div class="form-group col">
-            <label>Título</label>
-            <select
-              formControlName="titulo"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': f.titulo.errors && f.titulo.touched }"
-            >
-              <option value="">Selecione ...</option>
-              <option value="0">Não Quero</option>
-              <option value="Senhorita">Tecnólogo(a)</option>
-              <option value="Senhorita">Bacharel</option>
-              <option value="Senhorita">Especialista</option>
-              <option value="Senhorita">Pós Graduado(a)</option>
-              <option value="Senhorita">Mestre</option>
-              <option value="Senhorita">Doutor(a)</option>
-              <option value="Senhorita">Pós Doc</option>
-            </select>
-            <div class="invalid-feedback" *ngIf="f.titulo.errors?.required">
-              Campo Obrigatório
+        <tabset>
+          <tab class="border border-top-0 p-3">
+            <ng-template tabHeading>
+              <i class="fa fa-address-card mr-2"></i><span>Perfil</span>
+            </ng-template>
+            <app-perfil-detalhe (changeFormValue)="getFormValue($event)"></app-perfil-detalhe>
+          </tab>
+          <tab *ngIf="ehPalestrante" class="border border-top-0 p-3">
+            <ng-template tabHeading>
+              <i class="fa fa-user mr-2"></i><span>Palestrante</span>
+            </ng-template>
+            <div class="form-group">
+              <h3 class="border-bottom"> Palestrante </h3>
             </div>
-          </div>
-          <div class="form-group col-sm-5">
-            <label>Primeiro Nome</label>
-            <input
-              type="text"
-              class="form-control"
-              formControlName="primeiroNome"
-              [ngClass]="{'is-invalid':f.primeiroNome.errors && f.primeiroNome.touched}"
-              placeholder="Primeiro nome"
-            />
-            <div class="invalid-feedback" *ngIf="f.primeiroNome.errors?.required">
-              Campo Obrigatório
+
+            <app-palestrante-detalhe></app-palestrante-detalhe>
+          </tab>
+          <tab *ngIf="ehPalestrante" class="border border-top-0 p-3">
+            <ng-template tabHeading>
+              <i class="fa fa-share-square mr-2"></i><span>Rede Social</span>
+            </ng-template>
+            <div class="form-group">
+              <h3 class="border-bottom"> Rede Social </h3>
             </div>
-          </div>
-          <div class="form-group col-sm-5">
-            <label>Último nome</label>
-            <input
-              type="text"
-              formControlName="ultimoNome"
-              class="form-control"
-              [ngClass]="{
-                'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched
-              }"
-              placeholder="Último nome"
-            />
-            <div class="invalid-feedback" *ngIf="f.ultimoNome.errors?.required">
-              Campo Obrigatório
-            </div>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-sm-5">
-            <label>E-mail</label>
-            <input
-              type="text"
-              formControlName="email"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': f.email.errors && f.email.touched }"
-              placeholder="E-mail"
-            />
-            <div class="invalid-feedback" *ngIf="f.email.errors?.required">
-              Campo Obrigatório
-            </div>
-            <div class="invalid-feedback" *ngIf="f.email.errors?.email">
-              E-mail inválido
-            </div>
-          </div>
-          <div class="form-group col-sm-4">
-            <label>Telefone</label>
-            <input
-              type="text"
-              formControlName="telefone"
-              class="form-control"
-              [ngClass]="{
-                'is-invalid': f.telefone.errors && f.telefone.touched
-              }"
-              placeholder="Telefone"
-            />
-            <div class="invalid-feedback" *ngIf="f.telefone.errors?.required">
-              Campo Obrigatório
-            </div>
-          </div>
-          <div class="form-group col-sm">
-            <label>Função</label>
-            <select
-              formControlName="funcao"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': f.funcao.errors && f.funcao.touched }"
-            >
-              <option value="">Selecione ...</option>
-              <option value="Participante">Participante</option>
-              <option value="Palestrante">Palestrante</option>
-            </select>
-            <div class="invalid-feedback" *ngIf="f.funcao.errors?.required">
-              Campo Obrigatório
-            </div>
-          </div>
-          <form-group class="col-12">
-            <label>Descrição</label>
-            <input
-              type="text"
-              formControlName="descricao"
-              class="form-control"
-              [ngClass]="{
-                'is-invalid': f.descricao.errors && f.descricao.touched
-              }"
-              placeholder="Descrição"
-            />
-            <div class="invalid-feedback" *ngIf="f.descricao.errors?.required">
-              Campo Obrigatório
-            </div>
-          </form-group>
-        </div>
-        <div>
-          <h3 class="pt-3 border-bottom">Mudar Senha</h3>
-          <p>Caso mude de senha, preencha os campos abaixo:</p>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-sm">
-            <label>Senha</label>
-            <input
-              type="password"
-              formControlName="senha"
-              class="form-control"
-              [ngClass]="{ 'is-invalid': f.senha.errors && f.senha.touched }"
-              placeholder="Senha"
-            />
-            <div class="invalid-feedback" *ngIf="f.senha.errors?.required">
-              Campo Obrigatório
-            </div>
-            <div class="invalid-feedback" *ngIf="f.senha.errors?.minlength">
-              Deve conter no mínimo 6 caracteres
-            </div>
-          </div>
-          <div class="form-group col-sm">
-            <label>Confirmar Senha</label>
-            <input
-              type="password"
-              formControlName="confirmeSenha"
-              class="form-control"
-              [ngClass]="{
-                'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched
-              }"
-              placeholder="Confirmar senha"
-            />
-            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.required">
-              Campo Obrigatório
-            </div>
-            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.mustMatch">
-              Senhas não conferem
-            </div>
-          </div>
-        </div>
+            <app-redesSociais></app-redesSociais>
+          </tab>
+        </tabset>
+
       </div>
     </div>
-    <div class="card-footer">
-      <div class="d-flex">
-        <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm()" >
-          Cancelar Alteração
-        </button>
-        <button class="btn btn-success" [disabled]="!form.valid">
-          <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
-          Salvar Alteração
-        </button>
-      </div>
-    </div>
-  </form>
+
+
 </div>
