--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,10 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm" *ngIf="showMenu()">
-
-  <a class="navbar-brand" href="#">
-   <i class="fa fa-users mb-2"></i>
-
+  <a class="navbar-brand" routerLink="home">
+  <i class="fa fa-users mb-2"></i>
   </a>
-
   <button
     class="navbar-toggler"
     type="button"
@@ -17,41 +14,46 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" [collapse]="isCollapsed" [isAnimated]="true" id="navbarNav">
-
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="eventos/lista">Eventos <span class="sr-only">
-          (current)</span></a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="contatos">Contatos</a>
-      </li>
+    <ul class="navbar-nav mr-auto" >
+      <ng-container *ngIf="(accountService.currentUser$ | async) !== null">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="dashboard">Dashboard <span class="sr-only"></span></a>
+        </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="eventos/lista">Eventos <span class="sr-only">
+              (current)</span></a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="contatos">Contatos</a>
+          </li>
+      </ng-container>
     </ul>
 
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown" dropdown>
+    <div *ngIf="(accountService.currentUser$ | async) == null" class="navbar-nav mr-3 d-xs-none d-none d-md-block">
+      <a class="btn btn-light mr-2 border" routerLink="/user/login">Entrar</a>
+      <a class="btn btn-warning" routerLink="/user/registration">Me cadastrar</a>
+    </div>
+
+    <ul *ngIf="(accountService.currentUser$ | async) !== null" class="navbar-nav">
+      <li class="nav-item dropdown" dropdown *ngIf="(accountService.currentUser$ | async) as user">
         <a dropdownToggle class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Hugo
+         {{ user.userName | titlecase}}
         </a>
-        <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <div *dropdownMenu class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" style="cursor:pointer"routerLink="user/perfil">
             Perfil
           </a>
           <div role="separator" class="divider"></div>
-          <a class="dropdown-item" routerLink="user/login">
+          <a (click)="logout()" class="dropdown-item" style="cursor:pointer;" routerLink="user/login">
             Sair
           </a>
         </div>
       </li>
     </ul>
-
   </div>
-
-
 </nav>
